tests/ui/borrowck/borrowck-no-cycle-in-exchange-heap.stderr
error[E0505]: cannot move out of `x` because it is borrowed
  --> $DIR/borrowck-no-cycle-in-exchange-heap.rs:16:15
   |
LL |       Cycle::Node(ref mut y) => {
   |                   --------- borrow of `x.0` occurs here
LL |         y.a = x;
   |         ---   ^ move out of `x` occurs here
   |         |
   |         borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0505`.
